# SAVANT

./: .flake8  .gitignore  README.md  pyproject.toml  sidebar.py
.github/workflows/: cd.yml  edit_cd.yml  edit_ci.yml  markit_cd.yml  markit_ci.yml  pipeline_runner.yml  trainit_cd.yml  trainit_ci.yml
Specification/: OpenLabel_SAVANT_subset.json  README.md  savant_ontology_1.3.0.ttl  savant_openlabel_subset.schema.json
TestVids/: Kraklanda_short.json  README.md
TestVids/Kraklanda_short/: Kraklanda_short.json
TestVids/Saro_roundabout/: GbgSaroRound_coords.csv  Saro_roundabout.json  Saro_visualmarkers.csv
Tools/UAVid/: split_train_val.py
Tools/markit/: SAVANT_openlabel_subset.schema.json  UAV.yaml  markit.py  print_ontology.py  remap_classes_to_ontology.py  train_yolo_obb.py
Tools/markit/markitlib/: __init__.py  config.py  outputvideo.py  utils.py
Tools/markit/markitlib/openlabel/: handler.py
Tools/markit/markitlib/postprocessing/: __init__.py  base.py  passes.py  pipeline.py
Tools/markit/markitlib/processing/: __init__.py  conflict_resolution.py  engines.py  video_processor.py
Tools/markit/tests/: README.md  __init__.py  conftest.py  test_config.py  test_geometry.py
docs/: edit.md  savant_app.md
edit/: DEV_README.md  README.md  USER_README.md
edit/src/edit/: global_exception_handler.py  logger_config.py  main.py  run_tests.py  version.py
edit/src/edit/controllers/: annotation_controller.py  project_state_controller.py  video_controller.py
edit/src/edit/frontend/: main_window.py
edit/src/edit/frontend/assets/: 1.3.1.ttl
edit/src/edit/frontend/theme/: constants.py  forms.py  menu_styler.py  playback_styles.py  (+1 more)
edit/src/edit/models/: OpenLabel.py
edit/src/edit/services/: annotation_service.py  exceptions.py  project_state.py  types.py  video_reader.py
edit/tests/assets/: Kraklanda_short.json
edit/tests/unit/controllers/: __init__.py  test_annotation_controller.py  test_annotation_controller_relations.py  test_project_state_controller.py
edit/tests/unit/frontend/: test_frontend_state_confidence.py
edit/tests/unit/models/: test_openlabel.py  test_openlabel_relations.py
edit/tests/unit/services/: test_annotation_service.py  test_annotation_service_relations.py  test_interpolation_service.py  test_project_state.py  test_video_reader.py
markit/: README.md  __init__.py  markit.py  print_ontology.py  pytest.ini  remap_classes_to_ontology.py  run_markit  run_markit.py
markit/markitlib/: __init__.py  config.py  geometry.py  outputvideo.py  utils.py
markit/markitlib/openlabel/: __init__.py  handler.py
markit/markitlib/postprocessing/: __init__.py  base.py  passes.py  pipeline.py
markit/markitlib/processing/: __init__.py  conflict_resolution.py  engines.py  id_manager.py  video_processor.py
markit/markitlib/vlm/: __init__.py  client.py  config.py  response_parser.py  sampling.py  vlm_pass.py
markit/markitlib/vlm/prompts/: __init__.py  default_prompts.json  loader.py
markit/tests/: README.md  conftest.py  test_config.py  test_geometry.py  test_integration.py  test_openlabel.py  test_postprocessing.py
ontology/: README.md  openlabel_ontology_scenario_tags.ttl  savant_ontology_1.3.1.ttl  savant_scenario.ttl
savant_app/: DEV_README.md  USER_README.md
savant_app/src/savant_app/: global_exception_handler.py  logger_config.py  main.py  utils.py
savant_app/src/savant_app/controllers/: annotation_controller.py  error_handler_middleware.py  project_state_controller.py  video_controller.py
savant_app/src/savant_app/frontend/: exceptions.py  main_window.py  types.py
savant_app/src/savant_app/models/: OpenLabel.py
savant_app/src/savant_app/services/: annotation_service.py  exceptions.py  interpolation_service.py  project_state.py  types.py  video_reader.py
savant_app/tests/unit/: test_utils.py
savant_app/tests/unit/controllers/: test_annotation_controller.py  test_annotation_controller_relations.py  test_project_state_controller.py
savant_app/tests/unit/frontend/: test_frontend_state_confidence.py
savant_app/tests/unit/models/: test_openlabel.py  test_openlabel_relations.py
savant_app/tests/unit/services/: test_annotation_service.py  test_annotation_service_relations.py  test_interpolation_service.py  test_project_state.py  test_video_reader.py
savant_common/: README.md  __init__.py  ontology.py  openlabel.py
schema/: README.md  savant_openlabel_subset.schema.json
trainit/: README.md  __init__.py  extract_yolo_training.py  split_train_val.py  train_yolo_obb.py
trainit/examples/: train_yolo_obb_example.yaml
trainit/examples/proj/: project.json
trainit/examples/trainingdata/Kraklanda/: dataset.yaml
trainit/examples/trainingdata/Saro/: dataset.yaml
trainit/tests/: __init__.py  conftest.py  test_dataset_service.py  test_integration.py  test_manifest_service.py  test_models.py  test_project_service.py  test_split_service.py  test_split_train_val.py
trainit/trainit_gui/: __init__.py  main.py
trainit/trainit_gui/controllers/: __init__.py  config_controller.py  dataset_controller.py  project_controller.py
trainit/trainit_gui/frontend/: __init__.py  help_texts.py  main_window.py
trainit/trainit_gui/frontend/dialogs/: __init__.py  generate_dialog.py  new_project_dialog.py  project_defaults_dialog.py  verify_manifest_dialog.py
trainit/trainit_gui/frontend/states/: __init__.py  app_state.py
trainit/trainit_gui/frontend/widgets/: __init__.py  analysis_panel.py  config_editor.py  config_list.py  dataset_selector.py  project_browser.py
trainit/trainit_gui/models/: __init__.py  dataset.py  manifest.py  project.py
trainit/trainit_gui/services/: __init__.py  config_generator.py  dataset_service.py  manifest_service.py  project_service.py  split_service.py
utils/: README.md  __init__.py  print_ontology.py  remap_classes_to_ontology.py
(+121 files in other folders)
